cabal-version:      2.4
name:               maesarat
version:            0.1.0.0
homepage:           https://github.com/ArdanaLabs/Maesarat
bug-reports:        https://github.com/ArdanaLabs/Maesarat/issues
synopsis:           A package for stress testing Cardano Dapps.
description:
  @stress-test@ provides a package for stress testing Cardano Dapps.

category:           Stress Testing
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/ArdanaLabs/Maesarat

library
  exposed-modules:  Maesarat
  build-depends:    base ^>=4.14.1.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable maesarat
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
