cabal-version:      2.4
name:               maesarat
version:            0.1.0.0
homepage:           https://github.com/ArdanaLabs/Maesarat
bug-reports:        https://github.com/ArdanaLabs/Maesarat/issues
synopsis:           A package for stress testing Cardano Dapps.
description:
  @maesarat@ provides a package for stress testing Cardano Dapps.

category:           Stress Testing
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/ArdanaLabs/Maesarat

common common-exts
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Maesarat.Data.Network
    Maesarat.Servant
    Maesarat.Testnet
    Maesarat.Testnet.Config
    Maesarat.Utils
    Maesarat.Wallet
    Maesarat.Wallet.API
    Maesarat.Wallet.Config

  build-depends:
    , base              ^>=4.14.1.0
    , bytestring        >=0.10.8.1 && <0.12
    , directory         ^>=1.3.5.0
    , http-client       >=0.5.13.1 && <0.8
    , http-media        ^>=0.8.0.0
    , optics-core       ^>=0.4
    , optics-th         ^>=0.4
    , process           ^>=1.6.7.0
    , safe-exceptions   ^>=0.1.7.0
    , servant           ^>=0.18
    , servant-client    ^>=0.18
    , text              ^>=1.2.3.2
    , text-conversions  >=0.2.0    && <0.4

  hs-source-dirs:   src
  default-language: Haskell2010

executable maesarat
  import:           common-exts
  main-is:          Main.hs
  other-modules:    Args
  build-depends:
    , base
    , http-client
    , maesarat
    , optics-core
    , optics-th
    , optparse-applicative  >=0.15.0.0 && <=0.17
    , process

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
